# my-cmake-unity-cmock

./: CMakeLists.txt  README.md  main.cpp  my_interface.h
submodule1/: CMakeLists.txt  submodule1.cpp  submodule1.h
submodule2/: CMakeLists.txt  submodule2.cpp  submodule2.h
tests/: CMakeLists.txt  test_my_interface.c  test_submodule1.c
